apps/media/tdarr/deployment-tdarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: tdarr
  labels:
    app: tdarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:2.96.01
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8265
              protocol: TCP
            - name: server
              containerPort: 8266
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/configs
            - name: server
              mountPath: /app/server
            - name: media-ingest
              mountPath: /media/ingest
            - name: movies
              mountPath: /media/movies
            - name: tvshows
              mountPath: /media/tvshows
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: server
          persistentVolumeClaim:
            claimName: tdarr-server
        - name: media-ingest
          persistentVolumeClaim:
            claimName: tdarr-media-ingest
        - name: movies
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: tvshows
          persistentVolumeClaim:
            claimName: jellyfin-tvshows
