apps/media/tdarr/service-tdarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
  labels:
    app: tdarr
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8265
      targetPort: web
      protocol: TCP
    - name: server
      port: 8266
      targetPort: server
      protocol: TCP
  selector:
    app: tdarr
