apps/media/tdarr/ingressroute-tdarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
  namespace: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.xrs444.net`)
      kind: Rule
      services:
        - name: tdarr
          port: 8265
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
